  * added support for pb-constraints in [w]cnf+ format
  * added support for "knf" format (see https://github.com/jreeves3/LiteralSorting?tab=readme-ov-file#knf-format)
  * addressed issue https://github.com/potassco/clasp/issues/107
  * added additional timing info to output (see https://github.com/potassco/clasp/issues/108)
  * "tweety" asp options are now applied when using config "many"
  * fixed unexpected undo calls from clingo propagator when adding "locked" clauses
  * fixed race condition in work splitting algorithm
  * fixed handling of "sticky" logic program options
  * fixed tests for CLASP_BUILD_WITH_THREADS=OFF
  * fixed potential infinite loop in DimacsParser
  * fixed potential nullptr access in parallel solve
  * fixed issues in `query` algorithm.
  * fixed issue in counting of binary learnt clauses.
  * fixed issue https://github.com/potassco/clasp/issues/106
  * fixed issue https://github.com/potassco/clasp/issues/105
  * fixed issue https://github.com/potassco/clasp/issues/104
  * fixed issue https://github.com/potassco/clasp/issues/103
  * fixed issue https://github.com/potassco/clasp/issues/101

clasp 3.3.10: Wednesday, 7th February 2024
  * fixed issue https://github.com/potassco/clasp/issues/88
  * fixed issue https://github.com/potassco/clasp/issues/90
  * fixed issue https://github.com/potassco/clasp/issues/91
  * fixed issue https://github.com/potassco/clasp/issues/93
  * fixed issue https://github.com/potassco/clasp/issues/95
  * fixed issue https://github.com/potassco/clasp/issues/96
  * fixed issue https://github.com/potassco/clasp/issues/98
  * fixed deprecation warnings (cf. https://github.com/potassco/clasp/pull/94)
  * fixed build error with VS 2022 17.8 (cf. https://github.com/potassco/clasp/pull/97)
  * dropped incorrect ConstString optimization (cf. https://github.com/potassco/clingo/issues/475)
  * clingo: added support for propagator undo mode

clasp 3.3.9: Saturday, 10th September 2022