@@ -13,6 +13,7 @@ clasp 3.4.0:
   * addressed issue https://github.com/potassco/clasp/issues/107
   * added additional timing info to output (see https://github.com/potassco/clasp/issues/108)
   * "tweety" asp options are now applied when using config "many"
+  * fixed post-condition of LogicProgram::dispose()
   * fixed unexpected undo calls from clingo propagator when adding "locked" clauses
   * fixed race condition in work splitting algorithm
   * fixed handling of "sticky" logic program options
